@@ -1,5 +1,7 @@
 1.15 Not Released
 
+ - Update AUTHOR and COPYRIGHT information.
+
  - Remove range reduction in _normalize_input(). The trigonometric functions do
    more accurate range reduction than we do.
 
